{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 25,
  "lineage": "9f222dc4-532f-1540-9e82-8dc6faf5c703",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882342736216:vpc/vpc-dc6d07a6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e0490e8c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a77166dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-dc6d07a6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3cf70642",
            "owner_id": "882342736216",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882342736216:loadbalancer/app/alb-test/1bf201b32ddc67d2",
            "arn_suffix": "app/alb-test/1bf201b32ddc67d2",
            "dns_name": "alb-test-1514795376.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:882342736216:loadbalancer/app/alb-test/1bf201b32ddc67d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-test",
            "security_groups": [
              "sg-03fa29ae58a755167"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-31a7821f"
              },
              {
                "subnet_id": "subnet-70dd862c"
              },
              {
                "subnet_id": "subnet-80d3b1be"
              },
              {
                "subnet_id": "subnet-bbfbebb4"
              },
              {
                "subnet_id": "subnet-c87729af"
              },
              {
                "subnet_id": "subnet-fb13fdb6"
              }
            ],
            "subnets": [
              "subnet-31a7821f",
              "subnet-70dd862c",
              "subnet-80d3b1be",
              "subnet-bbfbebb4",
              "subnet-c87729af",
              "subnet-fb13fdb6"
            ],
            "vpc_id": "vpc-dc6d07a6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.asg.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform_lb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:882342736216:listener/app/alb-test/1bf201b32ddc67d2/20731442fa7cd37f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404; page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:882342736216:listener/app/alb-test/1bf201b32ddc67d2/20731442fa7cd37f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:882342736216:loadbalancer/app/alb-test/1bf201b32ddc67d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.asg.aws_lb.terraform_lb"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:882342736216:security-group/sg-03fa29ae58a755167",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fa29ae58a755167",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-test",
            "name_prefix": null,
            "owner_id": "882342736216",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-dc6d07a6"
          }
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1263609372",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03fa29ae58a755167",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.asg.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2488000243",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03fa29ae58a755167",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.asg.aws_security_group.lb_sg"
          ]
        }
      ]
    }
  ]
}